<resources>
    <string name="app_name">Tormenta</string>
    <string name="pronostico">Pronóstico</string>
    <string name="nublado">N/A</string>
    <string name="tempreraturaGrados">N/A</string>
    <string name="empalme">N/A</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="fecha">03/05/2016</string>
    <string name="humedadTest">N/A</string>
    <string name="humedad">Humedad</string>
    <string name="vientoTest">N/A</string>
    <string name="viento">Viento</string>
    <string name="direccionVientoTest">N/A</string>
    <string name="direccionViento">Dirección</string>
    <string name="hora">N/A</string>
    <string name="buscar">Buscar</string>

</resources>
